# pidgin-convreverse

./: AUTHORS  ChangeLog  Makefile  Makefile.in  README  README.md  config.h  config.status  configure  configure.in  libtool
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  convreverse.c  convreverse.h
src/.deps/: convreverse.Plo
